--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=review-service
+server.error.include-message=always
+server.port=7003
+logging.level.root=INFO
+logging.level.ch.manoj=DEBUG
