added api and util lib

--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ch.manoj.microservices.api</groupId>
-            <artifactId>api</artifactId>
+            <groupId>ch.manoj.microservices.api.lib</groupId>
+            <artifactId>microservice-api-lib</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>ch.manoj.microservices.util</groupId>
-            <artifactId>util</artifactId>
+            <groupId>ch.manoj.microservices.util.lib</groupId>
+            <artifactId>microservice-util-lib</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
