--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.error.include-message=always
 server.port=7003
 logging.level.root=INFO
 logging.level.ch.manoj=DEBUG
+spring.profiles.active=docker
